修改master和trainer基础镜像的Dockerfile和部署脚本，更新Controller部署的deployment文件

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,11 +5,13 @@ COPY ./ .
 RUN sh scripts/build_wheel.sh
 
 FROM python:3.8.14 as base
-RUN pip install pyparsing -i https://pypi.org/simple
+RUN sed -i -E 's/(deb|security).debian.org/mirrors.aliyun.com/g' /etc/apt/sources.list
+RUN pip install pyparsing -i https://mirrors.aliyun.com/pypi/simple
+RUN pip install ping3 -i https://mirrors.aliyun.com/pypi/simple
+#RUN apt-get update & apt-get install inetutils-ping
 
-RUN apt-get -qq update && apt-get install -y iputils-ping vim gdb
 
 ENV VERSION="0.3.0rc1"
 COPY --from=builder /dlrover/dist/dlrover-${VERSION}-py3-none-any.whl /
-RUN pip install /dlrover-${VERSION}-py3-none-any.whl[k8s] --extra-index-url=https://pypi.org/simple && rm -f /*.whl
+RUN pip install /dlrover-${VERSION}-py3-none-any.whl[k8s] --extra-index-url=https://mirrors.aliyun.com/pypi/simple && rm -f /*.whl
 RUN unset VERSION
