--- a/dlrover/go/operator/config/manifests/bases/deployment.yaml
+++ b/dlrover/go/operator/config/manifests/bases/deployment.yaml
@@ -45,11 +45,11 @@ spec:
         - --health-probe-bind-address=:8081
         - --metrics-bind-address=127.0.0.1:8080
         - --leader-elect
-        - --master-image=registry.cn-hangzhou.aliyuncs.com/intell-ai/dlrover:master
+        - --master-image=easydl/dlrover-master:v1.0.0
         command:
         - /manager
-        image: easydl/elasticjob-controller:master
-        imagePullPolicy: Always
+        image: easydl/elasticjob-controller:v1.0.0
+        imagePullPolicy: IfNotPresent
         livenessProbe:
           httpGet:
             path: /healthz
