--- a/examples/pytorch/mnist/elastic_job.yaml
+++ b/examples/pytorch/mnist/elastic_job.yaml
@@ -8,19 +8,19 @@ spec:
   optimizeMode: single-job
   replicaSpecs:
     worker:
-      replicas: 4
+      replicas: 2
       template:
         spec:
           restartPolicy: Always
           containers:
             - name: main
               # yamllint disable-line rule:line-length
-              image: registry.cn-hangzhou.aliyuncs.com/intell-ai/dlrover:torch201-mnist
-              imagePullPolicy: Always
+              image: intell-ai/dlrover-cpu:torch200-mnist
+              imagePullPolicy: IfNotPresent
               command:
                 - /bin/bash
                 - -c
-                - "dlrover-run --network-check --nnodes=$WORKER_NUM \
+                - "python -m dlrover.trainer.check.gpu_check && dlrover-run --network-check --nnodes=$WORKER_NUM \
                   --nproc_per_node=2 --max_restarts=3  \
                   examples/pytorch/mnist/cnn_train.py --num_epochs 2 \
                   --training_data /data/mnist_png/training/ \
@@ -28,7 +28,7 @@ spec:
               resources:
                 limits:
                   cpu: "1"
-                  memory: 2Gi
+                  memory: 1Gi
                 requests:
                   cpu: "1"
-                  memory: 2Gi
+                  memory: 1Gi
